--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <p>Chọn chủ đề bạn muốn học hoặc tải lên file mới từ máy.</p>
 
   <div class="upload-wrapper">
-    <label for="upload">📁 Tải file Excel có cột CHỦ ĐỀ lên</label>
+    <label for="upload">📁 Tải file Excellên</label>
     <input type="file" id="upload" accept=".xlsx" onchange="handleExcelUpload(event)">
   </div>
 
