--- a/index.html
+++ b/index.html
@@ -2,221 +2,141 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>ÔN BÀI TALK TO KID - Theo Chủ Đề</title>
+  <meta charset="UTF-8" />
+  <title>ÔN BÀI TALK TO KID</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: sans-serif;
       text-align: center;
       padding: 1rem;
-      font-size: 110%;
-      line-height: 1.7;
+      font-size: 100%;
     }
     h1 {
-      font-size: 160%;
-    }
-    p {
-      font-size: 110%;
-      margin-top: -0.5rem;
-      margin-bottom: 1rem;
-    }
-    select, input[type="file"], input[type="radio"], label {
-      margin: 0.5rem;
-      font-size: 110%;
+      font-size: 180%;
+      margin-bottom: 0.5rem;
     }
     #question {
-      font-size: 200%;
+      font-size: 220%;
       font-weight: bold;
-      margin: 1.5rem 0;
+      margin: 1rem 0;
       color: #000;
     }
     #answer {
-      font-size: 150%;
-      margin: 1rem auto;
+      font-size: 170%;
+      margin: 1rem 0;
       color: #007b00;
       display: none;
-      max-width: 90%;
-      line-height: 1.4;
     }
-    .button-group {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      margin-top: 1rem;
-    }
-    .button-group button, .upload-wrapper label {
-      padding: 0.5rem 1rem;
-      font-size: 126%;
+    button {
+      padding: 0.7rem 1.2rem;
+      font-size: 130%;
       cursor: pointer;
-      border: none;
-      border-radius: 1rem;
-      background: #f2f2f2;
-      color: #0066cc;
-      display: inline-block;
+      margin: 0.5rem;
     }
-    input[type="file"] {
-      display: none;
+    #controls {
+      margin: 1rem auto;
+      max-width: 500px;
+    }
+    select {
+      width: 100%;
+      padding: 0.5rem;
+      font-size: 100%;
+      margin-bottom: 1rem;
     }
 
     @media (max-width: 768px) {
       body {
         font-size: 102%;
-        line-height: 1.5;
       }
       h1 {
-        font-size: 144%;
-      }
-      p {
-        font-size: 96%;
+        font-size: 150%;
       }
       #question {
-        font-size: 168%;
+        font-size: 180%;
       }
       #answer {
         font-size: 144%;
       }
-      .button-group button, .upload-wrapper label {
-        font-size: 118%;
-        padding: 0.5rem 0.9rem;
+      button {
+        font-size: 120%;
+        padding: 0.6rem 1rem;
       }
     }
   </style>
 </head>
 <body>
   <h1>ÔN BÀI TALK TO KID</h1>
-  <p>Chọn nguồn dữ liệu bạn muốn học:</p>
-
-  <div>
-    <label><input type="radio" name="source" value="default" checked onchange="loadDefault()"> Dùng file có sẵn (data.xlsx)</label>
-    <label><input type="radio" name="source" value="upload" onchange="showUpload()"> Tải file Excel của bạn</label>
-  </div>
-
-  <div class="upload-wrapper" id="uploadWrapper" style="display:none;">
-    <label for="upload">📁 Tải file Excel có cột CHỦ ĐỀ</label>
-    <input type="file" id="upload" accept=".xlsx" onchange="handleExcelUpload(event)">
-  </div>
-
-  <div>
-    <label for="topicSelect">🗂️ Chọn chủ đề: </label>
-    <select id="topicSelect" multiple onchange="filterByTopic()">
-      <option value="all" selected>Tất cả</option>
-    </select>
+  <div id="controls">
+    <select id="topicSelect" multiple></select>
   </div>
 
   <div id="question">[Câu sẽ hiện ở đây]</div>
   <div id="answer">[Câu trả lời]</div>
 
-  <div class="button-group">
-    <button onclick="showAnswer()">👁️ Xem kết quả</button>
-    <button onclick="pickRandom()">🎲 Câu tiếp theo</button>
-  </div>
+  <button onclick="showAnswer()">👁️ Xem kết quả</button>
+  <button onclick="pickRandom()">🎲 Câu tiếp theo</button>
 
   <script>
-    let allData = [];
-    let filteredData = [];
+    let data = [];
+    let filtered = [];
     let currentIndex = -1;
+    let classFromURL = new URLSearchParams(window.location.search).get("lop") || "";
 
-    function showUpload() {
-      document.getElementById("uploadWrapper").style.display = "block";
-      allData = [];
-      document.getElementById("topicSelect").innerHTML = '<option value="all" selected>Tất cả</option>';
-    }
+    fetch("data.xlsx")
+      .then(res => res.arrayBuffer())
+      .then(buffer => {
+        const wb = XLSX.read(buffer, { type: "array" });
+        const sheet = wb.Sheets[wb.SheetNames[0]];
+        const rows = XLSX.utils.sheet_to_json(sheet);
+        data = rows.filter(r => r["LỚP HỌC"] && r["LỚP HỌC"].trim() === classFromURL);
+        const topics = [...new Set(data.map(r => r["CHỦ ĐỀ"]))];
+        const topicSelect = document.getElementById("topicSelect");
+        topicSelect.innerHTML = '<option value="all">Tất cả chủ đề</option>' + topics.map(t => `<option value="${t}">${t}</option>`).join('');
+        const choices = new Choices("#topicSelect", { removeItemButton: true });
+        filtered = [...data];
+      })
+      .catch(err => alert("Lỗi tải dữ liệu: " + err));
 
-    function loadDefault() {
-      document.getElementById("uploadWrapper").style.display = "none";
-      fetch('data.xlsx')
-        .then(response => response.arrayBuffer())
-        .then(arrayBuffer => processWorkbook(arrayBuffer))
-        .catch(() => {
-          alert("Không thể tải file sẵn. Hãy chọn tải file từ máy.");
-        });
-    }
-
-    function handleExcelUpload(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = function(e) {
-        const dataArray = new Uint8Array(e.target.result);
-        const workbook = XLSX.read(dataArray, { type: 'array' });
-        const sheet = workbook.Sheets[workbook.SheetNames[0]];
-        const json = XLSX.utils.sheet_to_json(sheet);
-        loadData(json);
-      };
-      reader.readAsArrayBuffer(file);
-    }
-
-    function processWorkbook(arrayBuffer) {
-      const workbook = XLSX.read(arrayBuffer, { type: 'array' });
-      const sheet = workbook.Sheets[workbook.SheetNames[0]];
-      const json = XLSX.utils.sheet_to_json(sheet);
-      loadData(json);
-    }
-
-    function loadData(json) {
-      allData = json.map(row => ({
-        topic: row["CHỦ ĐỀ"],
-        vi: row["TIẾNG VIỆT"],
-        en: row["TIẾNG ANH"]
-      })).filter(item => item.vi && item.en && item.topic);
-      updateTopicList();
-      filterByTopic();
-      alert("Đã nạp " + allData.length + " câu.");
-    }
-
-    function updateTopicList() {
-      const select = document.getElementById("topicSelect");
-      const topics = [...new Set(allData.map(item => item.topic))];
-      select.innerHTML = '<option value="all" selected>Tất cả</option>';
-      topics.forEach(topic => {
-        const opt = document.createElement("option");
-        opt.value = topic;
-        opt.text = topic;
-        select.appendChild(opt);
-      });
-    }
-
-    function filterByTopic() {
-      const selectedOptions = Array.from(document.getElementById("topicSelect").selectedOptions).map(o => o.value);
-      if (selectedOptions.includes("all")) {
-        filteredData = [...allData];
+    function filterData() {
+      const selected = Array.from(document.querySelector("#topicSelect").selectedOptions).map(o => o.value);
+      if (selected.includes("all") || selected.length === 0) {
+        filtered = [...data];
       } else {
-        filteredData = allData.filter(item => selectedOptions.includes(item.topic));
+        filtered = data.filter(d => selected.includes(d["CHỦ ĐỀ"]));
       }
-      if (filteredData.length > 0) pickRandom();
     }
 
     function pickRandom() {
-      if (filteredData.length === 0) {
-        alert("Không có dữ liệu phù hợp.");
+      filterData();
+      if (filtered.length === 0) {
+        alert("Không có câu nào trong chủ đề đã chọn.");
         return;
       }
-      currentIndex = Math.floor(Math.random() * filteredData.length);
-      document.getElementById("question").innerText = filteredData[currentIndex].vi;
+      const rand = Math.floor(Math.random() * filtered.length);
+      const item = filtered[rand];
+      currentIndex = rand;
+      document.getElementById("question").innerText = item["ĐỀ BÀI"];
       document.getElementById("answer").style.display = "none";
     }
 
     function showAnswer() {
       if (currentIndex === -1) return;
-      const answerText = filteredData[currentIndex].en;
+      const item = filtered[currentIndex];
+      const answerText = item["ĐÁP ÁN"];
       document.getElementById("answer").innerText = answerText;
       document.getElementById("answer").style.display = "block";
 
       const utterance = new SpeechSynthesisUtterance(answerText);
       utterance.lang = 'en-US';
       const voices = speechSynthesis.getVoices();
-      const americanVoice = voices.find(v => v.lang === 'en-US' && (v.name.includes('Google') || v.name.includes('Microsoft')));
-      if (americanVoice) {
-        utterance.voice = americanVoice;
-      }
+      const usVoice = voices.find(v => v.lang === 'en-US' && v.name.includes('Google'));
+      if (usVoice) utterance.voice = usVoice;
       speechSynthesis.speak(utterance);
     }
-
-    // Tự tải file mặc định khi mở trang
-    window.onload = loadDefault;
   </script>
 </body>
 </html>
