--- a/index.html
+++ b/index.html
@@ -1,142 +1,227 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>ÔN BÀI TALK TO KID</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Uspeak - Talk to kid</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 1rem;
-      font-size: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #002F87, #6A75B3);
+      min-height: 100vh;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
     }
-    h1 {
-      font-size: 180%;
-      margin-bottom: 0.5rem;
-    }
-    #question {
-      font-size: 220%;
-      font-weight: bold;
-      margin: 1rem 0;
-      color: #000;
-    }
-    #answer {
-      font-size: 170%;
-      margin: 1rem 0;
-      color: #007b00;
-      display: none;
-    }
-    button {
-      padding: 0.7rem 1.2rem;
-      font-size: 130%;
-      cursor: pointer;
-      margin: 0.5rem;
-    }
-    #controls {
-      margin: 1rem auto;
-      max-width: 500px;
-    }
-    select {
+    .container {
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      padding: 30px;
+      max-width: 800px;
       width: 100%;
-      padding: 0.5rem;
-      font-size: 100%;
-      margin-bottom: 1rem;
+      text-align: center;
     }
-
-    @media (max-width: 768px) {
-      body {
-        font-size: 102%;
-      }
-      h1 {
-        font-size: 150%;
-      }
-      #question {
-        font-size: 180%;
-      }
-      #answer {
-        font-size: 144%;
-      }
-      button {
-        font-size: 120%;
-        padding: 0.6rem 1rem;
-      }
+    .header h1 {
+      font-size: 1.5em;
+      color: red; text-transform: uppercase;
+      margin-bottom: 10px;
+    }
+    .header p {
+      font-size: 1em;
+      color: #666;
+      margin-bottom: 20px;
+    }
+    .question {
+      font-size: 1.8em;
+      font-weight: bold;
+      margin: 25px 0;
+      color: #333;
+    }
+    .answer {
+      font-size: 1.2em;
+      color: green;
+      font-weight: bold;
+      display: none;
+      margin-bottom: 10px;
+    }
+    .answer.show { display: block; }
+    .btn {
+      padding: 6px 12px;
+      border: none;
+      border-radius: 20px;
+      margin: 10px;
+      font-weight: bold;
+      font-size: 0.9em;
+      cursor: pointer;
+    }
+    .btn-primary { background: #002F87; color: white; }
+    .btn-secondary { background: #4CAF50; color: white; }
+    #topicContainer {
+      display: none;
+      margin: 10px 0;
+    }
+    .topic-options {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 10px;
+      max-height: 200px;
+      overflow-y: auto;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      background: #f8f8f8;
+    }
+    .topic-option {
+      background: #f0f0f0;
+      padding: 8px 12px;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+    .topic-option input[type="checkbox"] {
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>ÔN BÀI TALK TO KID</h1>
-  <div id="controls">
-    <select id="topicSelect" multiple></select>
+  <div class="container">
+    <div class="header">
+      <h1>Uspeak - Talk to kid</h1>
+      <p>Ôn luyện mỗi ngày một chút, để tự tin giao tiếp hơn.</p>
+    </div>
+
+    <button onclick="toggleTopics()" class="btn btn-primary">🎯 Chọn chủ đề</button>
+    <div id="topicContainer">
+      <div id="topicOptions" class="topic-options">Đang tải dữ liệu...</div>
+    </div>
+
+    <div class="question" id="question">Chưa có dữ liệu.</div>
+    <div class="answer" id="answer"></div>
+
+    <button class="btn btn-primary" id="showAnswerBtn" disabled><i class="fa fa-eye"></i> Xem kết quả</button>
+    <button class="btn btn-secondary" id="nextBtn" disabled><i class="fa fa-dice"></i> Câu tiếp theo</button>
   </div>
 
-  <div id="question">[Câu sẽ hiện ở đây]</div>
-  <div id="answer">[Câu trả lời]</div>
-
-  <button onclick="showAnswer()">👁️ Xem kết quả</button>
-  <button onclick="pickRandom()">🎲 Câu tiếp theo</button>
-
   <script>
-    let data = [];
-    let filtered = [];
-    let currentIndex = -1;
-    let classFromURL = new URLSearchParams(window.location.search).get("lop") || "";
+    let allData = [], filteredData = [], currentIndex = -1;
 
-    fetch("data.xlsx")
-      .then(res => res.arrayBuffer())
-      .then(buffer => {
-        const wb = XLSX.read(buffer, { type: "array" });
-        const sheet = wb.Sheets[wb.SheetNames[0]];
-        const rows = XLSX.utils.sheet_to_json(sheet);
-        data = rows.filter(r => r["LỚP HỌC"] && r["LỚP HỌC"].trim() === classFromURL);
-        const topics = [...new Set(data.map(r => r["CHỦ ĐỀ"]))];
-        const topicSelect = document.getElementById("topicSelect");
-        topicSelect.innerHTML = '<option value="all">Tất cả chủ đề</option>' + topics.map(t => `<option value="${t}">${t}</option>`).join('');
-        const choices = new Choices("#topicSelect", { removeItemButton: true });
-        filtered = [...data];
-      })
-      .catch(err => alert("Lỗi tải dữ liệu: " + err));
+    const possibleFiles = [
+      'Uspeak_TTK.xlsx',
+      'data.xlsx'
+    ];
 
-    function filterData() {
-      const selected = Array.from(document.querySelector("#topicSelect").selectedOptions).map(o => o.value);
-      if (selected.includes("all") || selected.length === 0) {
-        filtered = [...data];
+    function toggleTopics() {
+      const container = document.getElementById("topicContainer");
+      container.style.display = container.style.display === "none" ? "block" : "none";
+    }
+
+    async function tryLoadExcelFiles() {
+      for (const file of possibleFiles) {
+        try {
+          const res = await fetch(file);
+          if (!res.ok) continue;
+
+          const buffer = await res.arrayBuffer();
+          const workbook = XLSX.read(buffer, { type: "array" });
+          const sheet = workbook.Sheets[workbook.SheetNames[0]];
+          const json = XLSX.utils.sheet_to_json(sheet);
+
+          allData = json.map(row => ({
+            topic: row["CHU_DE"]?.toString().trim(),
+            vi: row["DE_BAI"]?.toString().trim(),
+            en: row["DAP_AN"]?.toString().trim()
+          })).filter(item => item.topic && item.vi && item.en);
+
+          createTopicCheckboxes();
+          return;
+        } catch (err) {
+          console.log("Không thể đọc file:", file);
+        }
+      }
+      document.getElementById("question").innerText = "Không tìm thấy file Excel phù hợp!";
+    }
+
+    function createTopicCheckboxes() {
+      const container = document.getElementById("topicOptions");
+      const topics = [...new Set(allData.map(d => d.topic))].sort();
+      container.innerHTML = '';
+
+      const allBox = document.createElement("div");
+      allBox.className = "topic-option";
+      allBox.innerHTML = `<input type="checkbox" id="allTopics"> <label for="allTopics"><strong>Tất cả</strong></label>`;
+      container.appendChild(allBox);
+
+      topics.forEach(topic => {
+        const div = document.createElement("div");
+        div.className = "topic-option";
+        div.innerHTML = `<input type="checkbox" class="topicCheckbox" value="${topic}"> <label>${topic}</label>`;
+        container.appendChild(div);
+      });
+
+      container.querySelectorAll('input[type="checkbox"]').forEach(cb => {
+        cb.addEventListener("change", handleTopicFilter);
+      });
+
+      handleTopicFilter();
+    }
+
+    function handleTopicFilter() {
+      const checkAll = document.getElementById("allTopics").checked;
+      const checkboxes = document.querySelectorAll(".topicCheckbox");
+
+      let selectedTopics = [];
+
+      if (checkAll) {
+        filteredData = [...allData];
+        checkboxes.forEach(cb => cb.checked = false);
       } else {
-        filtered = data.filter(d => selected.includes(d["CHỦ ĐỀ"]));
+        selectedTopics = Array.from(checkboxes).filter(cb => cb.checked).map(cb => cb.value);
+        filteredData = allData.filter(item => selectedTopics.includes(item.topic));
+      }
+
+      document.getElementById("nextBtn").disabled = filteredData.length === 0;
+      document.getElementById("showAnswerBtn").disabled = true;
+
+      if (filteredData.length > 0) {
+        nextQuestion();
+      } else {
+        document.getElementById("question").innerText = "Vui lòng chọn ít nhất một chủ đề!";
+        document.getElementById("answer").innerText = "";
       }
     }
 
-    function pickRandom() {
-      filterData();
-      if (filtered.length === 0) {
-        alert("Không có câu nào trong chủ đề đã chọn.");
-        return;
-      }
-      const rand = Math.floor(Math.random() * filtered.length);
-      const item = filtered[rand];
-      currentIndex = rand;
-      document.getElementById("question").innerText = item["ĐỀ BÀI"];
-      document.getElementById("answer").style.display = "none";
+    function nextQuestion() {
+      if (filteredData.length === 0) return;
+      currentIndex = Math.floor(Math.random() * filteredData.length);
+      const q = filteredData[currentIndex];
+      document.getElementById("question").innerText = q.vi;
+      document.getElementById("answer").innerText = q.en;
+      document.getElementById("answer").classList.remove("show");
+      document.getElementById("showAnswerBtn").disabled = false;
     }
 
     function showAnswer() {
-      if (currentIndex === -1) return;
-      const item = filtered[currentIndex];
-      const answerText = item["ĐÁP ÁN"];
-      document.getElementById("answer").innerText = answerText;
-      document.getElementById("answer").style.display = "block";
+      const text = document.getElementById("answer").innerText;
+      document.getElementById("answer").classList.add("show");
 
-      const utterance = new SpeechSynthesisUtterance(answerText);
-      utterance.lang = 'en-US';
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = "en-US";
       const voices = speechSynthesis.getVoices();
-      const usVoice = voices.find(v => v.lang === 'en-US' && v.name.includes('Google'));
-      if (usVoice) utterance.voice = usVoice;
+      const preferred = voices.find(v => v.lang === 'en-US' && v.name.toLowerCase().includes('google'));
+      if (preferred) utterance.voice = preferred;
       speechSynthesis.speak(utterance);
     }
+
+    document.getElementById("nextBtn").addEventListener("click", nextQuestion);
+    document.getElementById("showAnswerBtn").addEventListener("click", showAnswer);
+
+    tryLoadExcelFiles();
   </script>
 </body>
 </html>
