--- a/index.html
+++ b/index.html
@@ -111,44 +111,35 @@
   <script>
     let allData = [], filteredData = [], currentIndex = -1;
 
-    async function tryLoadExcelFiles() {
-      const files = await fetch(window.location.href)
-        .then(res => res.text())
-        .then(html => {
-          const matches = html.match(/href="([^\"]+\.xlsx)"/g);
-          return matches ? matches.map(m => m.replace(/href=|\"/g, '')) : [];
-        });
+    async function loadFixedExcelFile(filename = 'data.xlsx') {
+      try {
+        const res = await fetch(filename);
+        if (!res.ok) throw new Error("Không thể tải file");
 
-      for (const file of files) {
-        try {
-          const res = await fetch(file);
-          if (!res.ok) continue;
+        const buffer = await res.arrayBuffer();
+        const workbook = XLSX.read(buffer, { type: "array" });
 
-          const buffer = await res.arrayBuffer();
-          const workbook = XLSX.read(buffer, { type: "array" });
+        for (const sheetName of workbook.SheetNames) {
+          const sheet = workbook.Sheets[sheetName];
+          const json = XLSX.utils.sheet_to_json(sheet, { defval: "" });
 
-          for (const sheetName of workbook.SheetNames) {
-            const sheet = workbook.Sheets[sheetName];
-            const json = XLSX.utils.sheet_to_json(sheet, { defval: "" });
+          const data = json.map(row => ({
+            topic: row["CHU_DE"]?.toString().trim(),
+            vi: row["DE_BAI"]?.toString().trim(),
+            en: row["DAP_AN"]?.toString().trim()
+          })).filter(item => item.topic && item.vi);
 
-            const data = json.map(row => ({
-              topic: row["CHU_DE"]?.toString().trim(),
-              vi: row["DE_BAI"]?.toString().trim(),
-              en: row["DAP_AN"]?.toString().trim()
-            })).filter(item => item.topic && item.vi);
-
-            allData.push(...data);
-          }
-
-          if (allData.length > 0) {
-            createTopicCheckboxes();
-            return;
-          }
-        } catch (err) {
-          console.log("Không thể đọc file:", file);
+          allData.push(...data);
         }
+
+        if (allData.length > 0) {
+          createTopicCheckboxes();
+        } else {
+          document.getElementById("question").innerText = "Không có dữ liệu hợp lệ trong file Excel!";
+        }
+      } catch (err) {
+        document.getElementById("question").innerText = "Lỗi khi tải file Excel: " + err.message;
       }
-      document.getElementById("question").innerText = "Không tìm thấy file Excel phù hợp!";
     }
 
     function toggleTopics() {
@@ -230,7 +221,7 @@
     document.getElementById("nextBtn").addEventListener("click", nextQuestion);
     document.getElementById("showAnswerBtn").addEventListener("click", showAnswer);
 
-    tryLoadExcelFiles();
+    loadFixedExcelFile();
   </script>
 </body>
 </html>
