--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
     }
     .answer.show { display: block; }
     .btn {
-      padding: 10px 20px;
+      padding: 6px 14px;
       border: none;
       border-radius: 20px;
       margin: 10px;
       font-weight: bold;
-      font-size: 1em;
+      font-size: 0.9em;
       cursor: pointer;
     }
     .btn-primary { background: #002F87; color: white; }
     .btn-secondary { background: #4CAF50; color: white; }
     #topicContainer {
       display: none;
-      margin: 20px 0;
+      margin: 10px 0;
     }
     .topic-options {
       display: grid;
@@ -89,11 +89,10 @@
     .topic-option input[type="checkbox"] {
       cursor: pointer;
     }
-    #counter {
-      font-size: 0.9em;
-      color: #444;
-      margin-top: -10px;
-      margin-bottom: 10px;
+    #selectedCount {
+      font-size: 0.8em;
+      color: #333;
+      margin-bottom: 8px;
     }
   </style>
 </head>
@@ -106,10 +105,10 @@
 
     <button onclick="toggleTopics()" class="btn btn-primary">🎯 Chọn chủ đề</button>
     <div id="topicContainer">
+      <div id="selectedCount">Số chủ đề đã chọn: 0</div>
       <div id="topicOptions" class="topic-options">Đang tải dữ liệu...</div>
     </div>
 
-    <div id="counter"></div>
     <div class="question" id="question">Chưa có dữ liệu.</div>
     <div class="answer" id="answer"></div>
 
@@ -140,6 +139,8 @@
 
           allData.push(...data);
         }
+
+        console.log("📊 allData topics:", [...new Set(allData.map(d => d.topic))]);
 
         if (allData.length > 0) {
           createTopicCheckboxes();
@@ -199,13 +200,14 @@
       document.getElementById("nextBtn").disabled = filteredData.length === 0;
       document.getElementById("showAnswerBtn").disabled = true;
 
+      document.getElementById("selectedCount").innerText = `Số chủ đề đã chọn: ${new Set(filteredData.map(d => d.topic)).size}`;
+
       if (filteredData.length > 0) {
-        document.getElementById("topicContainer").style.display = "none"; // auto hide
+        document.getElementById("topicContainer").style.display = "none";
         nextQuestion();
       } else {
         document.getElementById("question").innerText = "Vui lòng chọn ít nhất một chủ đề!";
         document.getElementById("answer").innerText = "";
-        document.getElementById("counter").innerText = "";
       }
     }
 
@@ -217,9 +219,6 @@
       document.getElementById("answer").innerText = q.en;
       document.getElementById("answer").classList.remove("show");
       document.getElementById("showAnswerBtn").disabled = false;
-
-      const remaining = filteredData.length;
-      document.getElementById("counter").innerText = `Số câu còn lại: ${remaining}`;
     }
 
     function showAnswer() {
