--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       font-size: 0.9em;
       cursor: pointer;
     }
-    .btn-primary { background: #002F87; color: white; font-size: 0.85em; padding: 4px 12px; }
+    .btn-primary { background: #607D8B; color: white; font-size: 0.85em; padding: 4px 12px; }
     .btn-secondary { background: #4CAF50; color: white; }
     #topicContainer {
       display: none;
@@ -127,7 +127,6 @@
     <button class="btn btn-primary" id="showAnswerBtn" disabled><i class="fa fa-eye"></i> Xem kết quả</button>
     <button class="btn btn-secondary" id="nextBtn" disabled><i class="fa fa-dice"></i> Câu tiếp theo</button>
   </div>
-
   <script>
     let allData = [], filteredData = [], currentIndex = -1;
 
